(include_subdirs qualified)

(menhir
  (modules parser_generated)
  (flags --external-tokens Token --table))
  
(ocamllex lexer_generated)

(library
 (name aether_frontend)
 (inline_tests)
 (flags
  ; turn pattern matching into error 
  (:standard -warn-error -A+8 -w -23))
 (preprocess
  (pps
   ppx_deriving.enum
   ppx_deriving.iter
   ppx_deriving.map
   ppx_deriving.fold
   ppx_jane
   -log-source-position))
 (libraries core folds menhirLib))
