(include_subdirs qualified)

(library
 (name aether2)
 (inline_tests)
 (flags
  (:standard -warn-error -A -w -23))
 (preprocess
  (pps
   ppx_deriving.enum
   ppx_deriving.iter
   ppx_deriving.map
   ppx_deriving.fold
   ppx_jane
   -log-source-position))
 (libraries core algaeff folds higher_kinded aether_data aether_entity zarith int_repr)
 (ocamlopt_flags -S))
