(include_subdirs qualified)

(library
 (name aether2)
 (inline_tests)
 (flags
  ; turn pattern matching into error 
  (:standard -warn-error -A+8 -w -23))
 (preprocess
  (pps
   ppx_deriving.enum
   ppx_deriving.iter
   ppx_deriving.map
   ppx_deriving.fold
   ppx_jane
   ppx_inline_test
   -log-source-position))
 (libraries
  core
  algaeff
  folds
  higher_kinded
  aether_data
  aether_entity
  zarith
  int_repr))
